Prevent dataset description from overflowing. Closes #864.

--- a/client/static/css/panda.css
+++ b/client/static/css/panda.css
@@ -227,6 +227,7 @@ h3 { font-weight: normal; padding-bottom: 4px; }
 
 #view-dataset h3 { display: block; float: left; }
 #view-dataset h6 { margin-top: 10px; margin-bottom: 3px; }
+#view-dataset .description { word-wrap: break-word; }
 #view-dataset #dataset-actions { float: left; } 
 #view-dataset #dataset-actions a.disabled { color: #aaa; cursor: default; } 
 #view-dataset p.disabled { color: #aaa; } 
